# CTU-studies

./: .gitignore  README.md
1/ANJ/ukoly/: Writing task - Cafourek.docx
1/PRP/: prp-lab01.sh
1/PRP/b0b36prp-hw01/: b0b36prp-hw01-genref  b0b36prp-hw01-genref-osx  hw01-b0b36prp  main  main.c
1/PRP/b0b36prp-hw02/: main  main.c
1/PRP/b0b36prp-hw03/: main  main.c
1/PRP/b0b36prp-hw04/: main  main.c
1/PRP/b0b36prp-hw05/: main  main.c  massif.out.11580
1/PRP/b0b36prp-hw06/: main  main.c  main1  main1.c
1/PRP/b0b36prp-hw07/: grep  grep.c  ondra  ondra.c  ondra.in
1/PRP/b0b36prp-hw08/: hw08-b0b36prp  queue.c  queue.h
1/RPH/SpamFilter-master/: confmat.py  corpus.py  filter.py  quality.py  test_confmat.py  utils.py
1/RPH/ctvrta_hodina/: seznam.py
1/RPH/druha_hodina/: CompNum.py  find_max.py  vectors.py
1/RPH/osma_hodina/: test_rosemary.py
1/RPH/pata_hodina/: find_value.py
1/RPH/sedma_hodina/: matrix.py
1/RPH/sesta_hodina/: game_of_life.py
1/RPH/spam_filter/: utils.py
1/RPH/treti_hodina/: cuboid.py
1/RPH/uvodni_hodina/: helloworld.py  main.py  monty_hall.py  temp_convertor.py  zzz.py
1/RPH/veznovo_dilema/: README.md  player.py  test_game.py
2/APO/Cviceni/: bubble-sort-cache.txt  cachegrind.out.1040  cachegrind.out.1070  cachegrind.out.1100  minmax1  minmax1.c  minmax2  minmax2.c  minmax3  minmax3.c  read_array-cache.txt  read_array.S  selection-sort-cache.txt
3/OSY/du01/: a.txt  my_script.sh  output.tgz
3/OSY/du02/: a.txt  b.txt  my_script2.sh
3/OSY/du03/: Makefile  forkpipe.c  osy04.tgz
3/OSY/du04/: Makefile  a.txt  prod-cons.c
3/OSY/du05/: Makefile  a.txt  c.txt  factory.c
3/OSY/du06/: hexconv.c
4/DBS/: dbs.html  erdiagram.xml  scheme_w3schools.pgerd  sql_w3schools.sql
4/FUP/exams/: Ancestor.hs  BalancedTree.hs  BuildingTrees.hs  CheapFlights.hs  ConvexHull.hs  FermatPrimality.hs  Filetree.hs  Justify.hs  Knights.hs  Manhattan.hs  Minesweeper.hs  NFA.hs  PhotoSkyscraper.hs  PrettyPrinting.hs  RPS.hs  Sierpinsky.hs  SpanningTree.hs  SpiralMatrix.hs  SquareCode.hs  UnitPropagation.hs  ancestor.rkt  balanced-tree.rkt  building-trees.rkt  cheapflights.rkt  convexhull.rkt  filetree.rkt  justify.rkt  knights.rkt  manhattan.rkt  minesweeper.rkt  nfa.rkt  photo-skyscraper.rkt  rps.rkt  spanning-tree.rkt  spiral-matrix.rkt  square-code.rkt
4/FUP/hw/: 2S1.lmb  Hw3.hs  Hw4.hs  Parser.hs  execHw4.hs  filename.lmb  hw1.bak  hw1.rkt  hw2.rkt
4/FUP/labs/: Lab08.hs  Lab09.hs  Lab10.hs  Lab11.hs  Lab12.hs  Random.hs  lab1.rkt  lab2.rkt  lab3.rkt  lab4.rkt  lab5.rkt  lab6.rkt  lab7.rkt
4/PDV/hw/hw01/: CMakeLists.txt
4/PDV/hw/hw01/src/: ThreadPool.h  main.cpp
4/PDV/hw/hw04/: CMakeLists.txt
4/PDV/hw/hw04/src/: generator.cpp  generator.h  main.cpp  params.h  query.h
4/PDV/hw/hw05/: CMakeLists.txt
4/PDV/hw/hw05/src/: main.cpp  sort.cpp  sort.h  test.h
4/PDV/labs/lab02/: CMakeLists.txt
4/PDV/labs/lab02/src/: 1threads.cpp  1threads.h  1threads_benchmark.cpp  2condition_variable.cpp
4/PDV/labs/lab03_solution/: CMakeLists.txt
4/PDV/labs/lab03_solution/pdv_lib/: pdv_lib.hpp
4/PDV/labs/lab03_solution/pdv_lib/benchmark/: core.hpp
4/PDV/labs/lab03_solution/src/: 2integrate.cpp  2integrate.hpp  2integrate_benchmark.cpp
4/PDV/labs/lab05/: CMakeLists.txt
4/PDV/labs/lab05/pdv_lib/benchmark/: core.hpp  result.hpp
4/PDV/labs/lab05/src/: ._1early_exit.cpp  ._2cancellations.cpp  ._3tasks.cpp  1early_exit.cpp  2cancellations.cpp  3tasks.cpp
4/PDV/labs/lab07/: CMakeLists.txt
4/PDV/labs/lab07/pdv_lib/: random.hpp
4/PDV/labs/lab07/pdv_lib/benchmark/: result.hpp
4/PDV/labs/lab07/src/: 1autovectorization.cpp  2intrinsics_test.cpp  3normal_distribution.cpp  4conditional_swap.cpp  5matrix.cpp  simd.h
4/PDV/labs/lab08_solution/: CMakeLists.txt
4/PDV/labs/lab08_solution/pdv_lib/: benchmark.hpp  pdv_lib.hpp  util.hpp
4/PDV/labs/lab08_solution/pdv_lib/benchmark/: core.hpp
4/PDV/labs/lab08_solution/src/: multiply.cpp  multiply.hpp  sparse_matrix.hpp
4/PDV/labs/tutorial_01/: CMakeLists.txt
4/PDV/labs/tutorial_01/pdv_lib/: benchmark.hpp
4/PDV/labs/tutorial_01/pdv_lib/benchmark/: core.hpp
4/PDV/labs/tutorial_01/src/: 0hello.cpp  1memory.cpp  2matrix.cpp  3false_sharing.cpp
4/PDV/labs/tutorial_02/: CMakeLists.txt  PDVCrypt.h  benchmark.cpp  condition_variable.cpp  decryption.cpp  decryption.h
4/PDV/labs/tutorial_04/: CMakeLists.txt  lockBased.h  lockFree.h  main.cpp
4/PDV/labs/tutorial_05solved/: CMakeLists.txt  decompose.cpp  decompose.h  main.cpp
4/PDV/labs/tutorial_06/: CMakeLists.txt  generators.h  sorting.cpp
4/PDV/labs/tutorial_06/_countingsort/: countingsort.h
4/PDV/labs/tutorial_06/_mergesort/: mergesort_parallel.h  mergesort_sequential.h
4/PDV/labs/tutorial_06/_prefixsum/: prefixsum.h
4/PDV/labs/tutorial_07solved/: CMakeLists.txt  autovec.cpp  cond.cpp  lzcnt.cpp  normdist.cpp  popcnt.cpp
4/PDV/labs/tutorial_08/: CMakeLists.txt  main.cpp  multiply.cpp  multiply.h  sparse.h
4/TS1/: README.md
4/TS1/cv06-pairwise/: input.txt  test_cases.csv
4/TS1/cv07-process/: TS1_hw.prj  table.xlsx
4/TS1/hw02/: pom.xml
4/TS1/hw04/: pom.xml
4/TS1/lab01_hw01/: pom.xml
4/TS1/lab08/: pom.xml
4/TS1/lab10/: pom.xml
4/TS1/ts1-selenium/: pom.xml
5/ALG 2/hw1/: CMakeLists.txt  main.cpp
5/ALG 2/hw3/: main.cpp  pub01.in  pub02.in  pub03.in  pub04.in  pub05.in  pub06.in  pub07.in  pub08.in  pub09.in
5/ALG 2/hw4/: CMakeLists.txt  main.cpp  pub01.in  pub02.in  pub03.in  pub04.in  pub05.in  pub06.in  pub07.in  pub08.in  pub09.in  pub10.in
5/ALG 2/hw7/: CMakeLists.txt  main  main.cpp  main2  main2.cpp  main3  main3.cpp  pub01.in  pub02.in  pub03.in  pub03.out  pub04.in  pub04.out  pub05.in  pub05.out  pub06.in  pub06.out  pub07.in  pub07.out  pub08.out  pub09.out  pub10.out
5/ALG 2/hw8/: CMakeLists.txt  main  main.c  main.cpp  maincpp  pub01.in  pub02.in  pub03.in  pub03.out  pub04.in  pub04.out  pub05.in  pub05.out  pub06.in  pub06.out  pub07.in  pub07.out  pub08.in  pub08.out  pub09.in  pub09.out  pub10.in  pub10.out
5/ALG/du01/: main  main.c  main2  main2.c
5/ALG/du02/: main  main.c
5/ALG/du03/: main  (+1 more)
(+1255 files in other folders)
